--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -32,6 +32,7 @@
                 android:layout_height="wrap_content" />
 
             <ImageView
+                android:clickable="false"
                 android:layout_marginLeft="5dp"
                 android:src="@mipmap/head_back"
                 android:layout_width="wrap_content"
