--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -17,6 +17,7 @@
         android:layout_height="0.45dp"
         android:background="@color/bottom_textcolor_defeaut"/>
     <RadioGroup
+        android:background="@color/whilte"
         android:id="@+id/rg_home_bottom_items"
         android:orientation="horizontal"
         android:layout_width="match_parent"
