--- a/app/src/main/res/layout/fragment_home_focus.xml
+++ b/app/src/main/res/layout/fragment_home_focus.xml
@@ -1,4 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="match_parent">
+
+    <TextView
+        android:background="@color/whilte"
+        android:textSize="17sp"
+        android:textColor="@color/black"
+        android:gravity="center"
+        android:text="关注"
+        android:layout_width="match_parent"
+        android:layout_height="50dp" />
+    <View
+        android:background="@color/bottom_textcolor_defeaut"
+        android:layout_width="match_parent"
+        android:layout_height="0.45dp"/>
+
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -6,19 +26,34 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:visibility="gone"
+        android:layout_marginTop="10dp"
+        android:visibility="visible"
         android:id="@+id/ll_focus_root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="@dimen/common_margin"
         android:orientation="vertical">
 
-        <com.bowen.hannengclub.view.LineItemView
-            android:id="@+id/li_design_circle"
-            app:my_title="设计圈"
-            app:my_logo="@mipmap/design_cirle"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content">
+
+            <com.bowen.hannengclub.view.LineItemView
+                android:id="@+id/li_design_circle"
+                app:my_title="设计圈"
+                app:my_logo="@mipmap/design_cirle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:clickable="false"
+                android:visibility="gone"
+                android:id="@+id/tv_focus_msg_point"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="30dp"
+                android:layout_centerVertical="true"
+                android:background="@drawable/msg_red_circle"
+                android:layout_width="8dp"
+                android:layout_height="8dp"/>
+        </RelativeLayout>
         <View
             android:background="@color/bottom_textcolor_defeaut"
             android:layout_width="match_parent"
@@ -71,5 +106,9 @@
 
     </LinearLayout>
 
-    <include layout="@layout/new_popup_common_view" />
+    <include layout="@layout/new_popup_common_view" android:visibility="gone" />
 </FrameLayout>
+
+
+
+</LinearLayout>
