--- a/app/src/main/res/layout/fragment_home_mine.xml
+++ b/app/src/main/res/layout/fragment_home_mine.xml
@@ -11,7 +11,7 @@
         android:textSize="17sp"
         android:textColor="@color/black"
         android:gravity="center"
-        android:text="我的个人中心"
+        android:text="我的"
         android:layout_width="match_parent"
         android:layout_height="50dp" />
     <View
