--- a/app/src/main/res/layout/fragment_home_mine.xml
+++ b/app/src/main/res/layout/fragment_home_mine.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <TextView
         android:background="@color/whilte"
@@ -74,11 +80,12 @@
 
                     <LinearLayout
                         android:id="@+id/mine_author_base_root"
-                        android:gravity="center"
+                        android:gravity="center_vertical|left"
                         android:orientation="horizontal"
                         android:layout_width="0dp"
                         android:minWidth="120dp"
                         android:layout_weight="1"
+                        android:paddingLeft="6dp"
                         android:layout_height="wrap_content">
 
                         <TextView
@@ -86,13 +93,13 @@
                             android:textSize="12sp"
                             android:id="@+id/tv_mine_lv"
                             android:text="LV 7"
+                            android:layout_marginRight="8dp"
                             android:textColor="@color/red"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
 
                         <TextView
-                            android:visibility="gone"
-                            android:layout_marginLeft="8dp"
+                            android:visibility="visible"
                             android:textSize="12sp"
                             android:id="@+id/tv_mine_author_status"
                             android:background="@drawable/red_conner_bg"
@@ -333,3 +340,7 @@
 
     </ScrollView>
 </LinearLayout>
+
+
+    <include layout="@layout/new_popup_common_view" android:visibility="gone" />
+</FrameLayout>
