--- a/app/src/main/res/layout/fragment_home_mine.xml
+++ b/app/src/main/res/layout/fragment_home_mine.xml
@@ -83,22 +83,24 @@
                         android:gravity="center_vertical|left"
                         android:orientation="horizontal"
                         android:layout_width="0dp"
-                        android:minWidth="120dp"
+                        android:minWidth="100dp"
                         android:layout_weight="1"
-                        android:paddingLeft="6dp"
+                        android:paddingLeft="4dp"
                         android:layout_height="wrap_content">
 
                         <TextView
-                            android:visibility="gone"
+                            android:maxLines="1"
+                            android:visibility="visible"
                             android:textSize="12sp"
                             android:id="@+id/tv_mine_lv"
                             android:text="LV 7"
-                            android:layout_marginRight="8dp"
+                            android:layout_marginRight="6dp"
                             android:textColor="@color/red"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
 
                         <TextView
+                            android:maxLines="1"
                             android:visibility="visible"
                             android:textSize="12sp"
                             android:id="@+id/tv_mine_author_status"
